--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "puppeteer": "^24.10.1"
+  },
+  "scripts": {
+    "postinstall": "puppeteer install"
   }
 }
