--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
     "playwright": "^1.44.0"
   },
   "scripts": {
-    "postinstall": "npx playwright install"
+    "postinstall": "playwright install"
   }
 }
