--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "canvas": "^3.1.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "playwright": "^1.44.0"
+    "playwright": "^1.44.0",
+    "sqlite3": "^5.1.7"
   },
   "scripts": {
     "postinstall": "playwright install"
