--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
     "sqlite3": "^5.1.7"
   },
   "scripts": {
-    "postinstall": "playwright install"
+    "postinstall": "playwright install --with-deps"
   }
 }
