--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
     "canvas": "^3.1.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "mysql2": "^3.14.1",
     "playwright": "^1.44.0",
     "sqlite3": "^5.1.7"
   },
-  "scripts": {
-
-  }
+  "scripts": {}
 }
